re PR middle-end/63422 (ICE in freqs_to_counts_path, at tree-ssa-threadupdate.c:981)

2014-10-01  Teresa Johnson  <tejohnson@google.com>

	PR middle-end/63422
	* tree-ssa-threadupdate.c (freqs_to_counts_path): Remove
	asserts to handle incoming insanities.

From-SVN: r215822